@@ -8,16 +8,16 @@
   <version>1.0.0-SNAPSHOT</version>
 
   <properties>
-    <maven.compiler.release>21</maven.compiler.release>
+    <maven.compiler.release>25</maven.compiler.release>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-    <quarkus.platform.version>3.29.3</quarkus.platform.version>
+    <quarkus.platform.version>3.30.4</quarkus.platform.version>
     <compiler-plugin.version>3.14.1</compiler-plugin.version>
     <surefire-plugin.version>3.5.4</surefire-plugin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <protobuf.version>4.33.1</protobuf.version>
-    <lombok.version>1.18.38</lombok.version>
+    <lombok.version>1.18.42</lombok.version>
   </properties>
 
   <dependencyManagement>
@@ -88,6 +88,11 @@
         <artifactId>quarkus-maven-plugin</artifactId>
         <version>${quarkus.platform.version}</version>
         <extensions>true</extensions>
+        <configuration>
+          <jvmArgs>
+            --enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow
+          </jvmArgs>
+        </configuration>
         <executions>
           <execution>
             <goals>
@@ -121,6 +126,7 @@
             <maven.home>${maven.home}</maven.home>
           </systemPropertyVariables>
           <argLine>
+            --sun-misc-unsafe-memory-access=allow
             -javaagent:${settings.localRepository}/org/mockito/mockito-core/5.20.0/mockito-core-5.20.0.jar
             -Xshare:off
           </argLine>
